--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -1,4 +1,7 @@
-
+<!DOCTYPE html>
+<html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+	  xmlns:th="http://www.thymeleaf.org"
+	  xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <nav th:fragment="navbarFragment"
 	 class="navbar navbar-expand-lg navbar-light bg-light border-bottom">
 	<button class="btn btn-primary" id="menu-toggle">Toggle Menu</button>
