--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
 <main class="content container-fluid" layout:fragment="content">
     <div>
         <h2>인증된 사용자 정보는 다음과 같습니다.</h2>
-        <p th:if="${#authentication.principal != null}">
+        <p th:if="${#authentication.principal instanceof T(com.sportsfit.shop.security.dto.MemberSecurityDTO)}">
             1. authentication.principal : <span th:text="${#authentication.principal}"></span><br/>
             2. 사용자 아이디(식별자, id/email) : <span th:text="${#authentication.principal.username}"></span><br/>
             3. 실제 사용자 이름 : <span th:text="${#authentication.principal.name}"></span><br/>
