[#14] 소셜로그인 수정

--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -79,9 +79,8 @@
                     </form>
                     <div class="mt-4">
                     </div>
-                    <button class="btn btn-outline-dark me-2" type="button">로그인</button>
-                    <button class="btn btn-outline-dark" type="button">회원가입</button>
-
+                    <a th:href="@{/member/login.do}" class="btn btn-outline-dark me-2" type="button">로그인</a>
+                    <a th:href="@{/member/join.do}" class="btn btn-outline-dark" type="button">회원가입</a>
             </div>
         </div>
     </nav>
