--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -26,11 +26,11 @@
     <!-- 헤더 -->
     <!--<header th:replace="fragments/header :: header">헤더가 들어올 공간</header>-->
     <!-- 네비게이션 바 -->
-    <nav th:replace="fragments/navbar :: navbar">네비게이션 바가 들어올 공간</nav>
+    <nav th:replace="~{fragments/navbar :: navbar}">네비게이션 바가 들어올 공간</nav>
     <!-- 메인 -->
-    <main class="container-fluid" layout:fragment="content">콘텐츠가 들어올 공간</main>
+    <main class="container-fluid" layout:fragment="~content">콘텐츠가 들어올 공간</main>
     <!-- 푸터 -->
-    <footer th:replace="fragments/footer :: footer">푸터가 들어올 공간</footer>
+    <footer th:replace="~{fragments/footer :: footer}">푸터가 들어올 공간</footer>
 
     <!-- 부트스트랩 JS 및 jQuery 추가 -->
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
