--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -3,6 +3,9 @@
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head>
     <meta charset="UTF-8">
+    <meta name="_csrf" th:content="${_csrf.token}" />
+    <meta name="_csrf_header" th:content="${_csrf.headerName}" />
+
     <title>SPORTSFIT</title>
     <!-- 부트스트랩 CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -28,7 +31,7 @@
     <!-- 네비게이션 바 -->
     <nav th:replace="~{fragments/navbar :: navbar}">네비게이션 바가 들어올 공간</nav>
     <!-- 메인 -->
-    <main class="container-fluid" layout:fragment="~content">콘텐츠가 들어올 공간</main>
+    <main class="container-fluid" layout:fragment="content">콘텐츠가 들어올 공간</main>
     <!-- 푸터 -->
     <footer th:replace="~{fragments/footer :: footer}">푸터가 들어올 공간</footer>
 
