--- a/src/main/resources/templates/member/join.html
+++ b/src/main/resources/templates/member/join.html
@@ -14,16 +14,39 @@
 
             <form th:action="@{/member/join.do}" method="post" class="form"
                   th:object="${memberFormDto}">
+
+                <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+
                 <div class="form-floating mb-3">
                     <input type="text" th:field="*{name}" class="form-control" id="nameInput" placeholder="Name">
                     <label for="nameInput">이름</label>
                     <small class="text-danger" id="nameError" th:if="${errorMap != null and errorMap.containsKey('name')}" th:text="${errorMap.get('name')}"></small>
                 </div>
-                <div class="form-floating mb-3">
-                    <input type="email" th:field="*{email}" class="form-control" id="emailInput" placeholder="name@example.com">
-                    <label for="emailInput">이메일</label>
+
+                <div class="mb-3">
+                    <div class="input-group">
+                        <div class="form-floating flex-grow-1">
+                            <input type="email" th:field="*{email}" class="form-control" id="emailInput" placeholder="name@example.com">
+                            <label for="emailInput">이메일</label>
+                        </div>
+                        <button type="button" class="btn btn-outline-secondary" id="emailDupleCheckBtn">중복 확인</button>
+                    </div>
                     <small class="text-danger" id="emailError" th:if="${errorMap != null and errorMap.containsKey('email')}" th:text="${errorMap.get('email')}"></small>
+                    <small id="emailDupleError" class="text-danger"></small>
                 </div>
+
+                <div class="mb-3">
+                    <div class="input-group">
+                        <div class="form-floating flex-grow-1">
+                            <input type="text" class="form-control" id="verificationCode" placeholder="000000" disabled>
+                            <label for="verificationCode">인증번호</label>
+                        </div>
+                        <button type="button" class="btn btn-outline-secondary" id="emailCodeBtn" onclick="sendVerificationCode()">인증번호 전송</button>
+                        <button type="button" class="btn btn-outline-secondary" id="emailCodeConfirmBtn" onclick="verifyCode()">인증번호 확인</button>
+                    </div>
+                    <small class="text-danger" id="verification-error" style="display:none;">인증번호가 일치하지 않습니다.</small>
+                </div>
+
                 <div class="form-floating mb-3">
                     <input type="password" th:field="*{password}" class="form-control" id="passwordInput" placeholder="Password">
                     <label for="passwordInput">비밀번호</label>
@@ -34,6 +57,7 @@
                     </div>
                     <small class="text-danger" id="passwordError" th:if="${errorMap != null and errorMap.containsKey('password')}" th:text="${errorMap.get('password')}"></small>
                 </div>
+
                 <div class="form-floating mb-3">
                     <input type="password" th:field="*{passwordConfirm}" class="form-control" id="pwConfirmInput" placeholder="Password">
                     <label for="pwConfirmInput">비밀번호 확인</label>
@@ -42,7 +66,7 @@
                 </div>
 
                 <div class="d-grid mt-5">
-                    <button type="submit" class="btn btn-lg btn-dark">가입하기</button>
+                    <button type="submit" class="btn btn-lg btn-dark" id="submitBtn"disabled>가입하기</button>
                 </div>
             </form>
 
@@ -59,5 +83,4 @@
 </main>
 
 <script layout:fragment="script" th:src="@{/js/join.js}"></script>
-
 </html>
