--- a/src/main/resources/templates/member/login.html
+++ b/src/main/resources/templates/member/login.html
@@ -40,7 +40,7 @@
             </div>
 
             <button type="button" class="btn btn-outline-secondary col-12 mb-3 mt-3">비밀번호 찾기</button>
-            <button type="button" class="btn btn-outline-secondary col-12">회원가입 하러가기</button>
+            <a th:href="@{/member/join.do}" class="btn btn-outline-secondary col-12">회원가입 하러가기</a>
         </div>
     </div>
 
