[#17] 템플릿 페이지 수정

--- a/src/main/resources/templates/layout/layout.html
+++ b/src/main/resources/templates/layout/layout.html
@@ -28,7 +28,7 @@
     <!-- 네비게이션 바 -->
     <nav th:replace="~{fragments/navbar :: navbar}">네비게이션 바가 들어올 공간</nav>
     <!-- 메인 -->
-    <main class="container-fluid" layout:fragment="~content">콘텐츠가 들어올 공간</main>
+    <main class="container-fluid" layout:fragment="content">콘텐츠가 들어올 공간</main>
     <!-- 푸터 -->
     <footer th:replace="~{fragments/footer :: footer}">푸터가 들어올 공간</footer>
 
