[#21] 메인페이지 대략 완성

--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <footer class="footer bg-white" th:fragment="footer">
+    <footer class="footer bg-dark" th:fragment="footer">
         <div class="container">
             <div class="row">
                 <div class="col-md-12 mt-5 text-center">
-                    <p class="text-dark">
+                    <p class="text-white">
                         &copy; Copyright <script>document.write(new Date().getFullYear());</script> By <b>SPORTSFIT</b>. All rights reserved
                     </p>
                 </div>
