--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 
-    <nav class="navbar navbar-expand-lg bg-body-white sticky-top" th:fragment="navbar">
+    <nav class="navbar navbar-expand-lg bg-white sticky-top" th:fragment="navbar">
         <div class="container-fluid d-flex align-items-center">
             <a class="navbar-brand me-5" href="#"><b>SPORTSFIT</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
