--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,7 +3,7 @@
 
     <nav class="navbar navbar-expand-lg bg-white sticky-top" th:fragment="navbar">
         <div class="container-fluid d-flex align-items-center">
-            <a class="navbar-brand me-5" href="#"><b>SPORTSFIT</b></a>
+            <a class="navbar-brand me-5" th:href="@{/}"><b>SPORTSFIT</b></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#spf-navbar" aria-controls="spf-navbar"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -12,7 +12,7 @@
             <div class="collapse navbar-collapse" id="spf-navbar">
                 <ul class="navbar-nav nav-underline me-auto mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link text-body-emphasis" href="#">신상품</a>
+                        <a class="nav-link text-body-emphasis" th:href="@{/item/list.do/gubun/NEW}">신상품</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-body-emphasis" href="#">베스트</a>
@@ -72,9 +72,9 @@
                         </ul>
                     </li>
                 </ul>
-                    <form class="d-flex me-2 mt-2 mb-2" role="search">
+                    <form th:action="@{/item/search}" method="get" class="d-flex me-2 mt-2 mb-2" role="search">
                         <input class="form-control me-2 focus-ring focus-ring-secondary border"
-                               type="search" placeholder="Search" aria-label="Search">
+                               type="search" name="searchText" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
                     </form>
                     <div class="mt-4">
