--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -10,77 +10,40 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="spf-navbar">
+
                 <ul class="navbar-nav nav-underline me-auto mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link text-body-emphasis" th:href="@{/item/list.do/gubun/NEW}">신상품</a>
+
+                    <li class="nav-item" th:each="gubunSubVo, iterStat : ${itemGubuns}">
+                        <a class="nav-link text-body-emphasis"
+                           th:if="${!iterStat.first}"
+                           th:href="@{|/item/list.do/gubun/${gubunSubVo.gubunSubName}|}"
+                           th:text="${gubunSubVo.gubunSubName}"></a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-body-emphasis" href="#">베스트</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            우먼즈
-                        </a>
+
+                    <li class="nav-item dropdown" th:each="entry : ${categories}">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false"
+                           th:text="${entry.key.categoryName}"></a>
                         <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">티셔츠</a></li>
-                            <li><a class="dropdown-item" href="#">브라탑</a></li>
-                            <li><a class="dropdown-item" href="#">아우터</a></li>
-                            <li><a class="dropdown-item" href="#">레깅스</a></li>
-                            <li><a class="dropdown-item" href="#">반바지</a></li>
-                            <li><a class="dropdown-item" href="#">조거팬츠</a></li>
-                            <li><a class="dropdown-item" href="#">와이드팬츠</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">수영복</a></li>
-                            <li><a class="dropdown-item" href="#">골프웨어</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            맨즈
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">폴로티/셔츠</a></li>
-                            <li><a class="dropdown-item" href="#">티셔츠</a></li>
-                            <li><a class="dropdown-item" href="#">반바지</a></li>
-                            <li><a class="dropdown-item" href="#">조거팬츠</a></li>
-                            <li><a class="dropdown-item" href="#">청바지</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">수영복</a></li>
-                            <li><a class="dropdown-item" href="#">골프웨어</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            키즈
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">상의</a></li>
-                            <li><a class="dropdown-item" href="#">아우터</a></li>
-                            <li><a class="dropdown-item" href="#">하의</a></li>
-                            <li><a class="dropdown-item" href="#">수영복</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle text-body" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            가방/액세서리
-                        </a>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="#">가방</a></li>
-                            <li><a class="dropdown-item" href="#">삭스/운동화</a></li>
-                            <li><a class="dropdown-item" href="#">모자/헤어밴드</a></li>
-                            <li><a class="dropdown-item" href="#">마스크</a></li>
+                            <li th:each="subCategory : ${entry.value}">
+                                <a class="dropdown-item" th:href="@{/item/list.do/category/{categoryId}(categoryId=${subCategory.categoryId})}"
+                                   th:text="${subCategory.categoryName}"></a>
+                            </li>
                         </ul>
                     </li>
                 </ul>
+
                     <form th:action="@{/item/search}" method="get" class="d-flex me-2 mt-2 mb-2" role="search">
                         <input class="form-control me-2 focus-ring focus-ring-secondary border"
                                type="search" name="searchText" placeholder="Search" aria-label="Search">
                         <button class="btn btn-outline-dark" type="submit"><i class="bi bi-search"></i></button>
                     </form>
+
                     <div class="mt-4">
                     </div>
+
                     <a th:href="@{/member/login.do}" class="btn btn-outline-dark me-2" type="button">로그인</a>
                     <a th:href="@{/member/join.do}" class="btn btn-outline-dark" type="button">회원가입</a>
+
             </div>
         </div>
     </nav>
